# flowcompute

./: .gitignore  CMakeLists.txt  README.md  add_headers.bat  core_types.h  cpplint.txt  cpplint_report.txt  main.cpp  main_window.cpp  main_window.h  main_window_slots.cpp  resources.qrc  run-clang-tidy.py  utils.cpp  utils.h
config/: boundary_conditions.json  fields.json  material_properties.json  solvers.json  turbulence.json
dialogs/boundary/: boundary_dialog.cpp  boundary_dialog.h
dialogs/mesh/: mesh_io.cpp  mesh_io.h  mesh_structs.h  page_10_geometry.cpp  page_10_geometry.h  page_20_blockmesh.cpp  page_20_blockmesh.h  page_30_blockmesh.cpp  page_30_blockmesh.h  page_40_surface_extraction.cpp  page_40_surface_extraction.h  page_50_castellation.cpp  page_50_castellation.h  page_60_snapcontrol.cpp  page_60_snapcontrol.h  page_70_layercontrol.cpp  page_70_layercontrol.h  page_80_execution.cpp  page_80_execution.h  wizard_mesh.cpp  wizard_mesh.h
dialogs/new_case/: page_10_intro.cpp  page_10_intro.h  page_20_tutorial.cpp  page_20_tutorial.h  page_30_interactive.cpp  page_30_interactive.h  page_40_project.cpp  page_40_project.h  template_strings.h  wizard_new_case.cpp  wizard_new_case.h
dialogs/preferences/: preferences_dialog.cpp  preferences_dialog.h
dialogs/run_mesh/: run_mesh_dialog.cpp  run_mesh_dialog.h
dialogs/run_solver/: run_solver_dialog.cpp  run_solver_dialog.h
dialogs/selection/: selection_dialog.cpp  selection_dialog.h
dialogs/solver/: page_10_control.cpp  page_10_control.h  page_20_physics.cpp  page_20_physics.h  page_20_transient.cpp  page_20_transient.h  page_30_boundary.cpp  page_30_boundary.h  page_30_physics.cpp  page_30_physics.h  page_40_algorithm.cpp  page_40_algorithm.h  page_40_boundary.cpp  page_40_boundary.h  page_50_algorithm.cpp  page_50_algorithm.h  page_50_parallel.cpp  page_50_parallel.h  page_60_simple.cpp  page_60_simple.h  page_70_pimple.cpp  page_70_pimple.h  page_80_piso.cpp  page_80_piso.h  page_90_parallel.cpp  page_90_parallel.h  page_93_visualization.cpp  page_93_visualization.h  pimple_widget.cpp  pimple_widget.h  piso_widget.cpp  piso_widget.h  simple_widget.cpp  simple_widget.h  solver_io.cpp  solver_io.h  solver_structs.h  surface_widget.cpp  surface_widget.h  wizard_solver.cpp  (+1 more)
dialogs/surface/: surface_dialog.cpp  surface_dialog.h
dialogs/utility_output/: utility_output_dialog.cpp  utility_output_dialog.h
editors/: tab_bar.cpp  tab_bar.h  tab_widget.cpp  tab_widget.h
editors/graphical/: table_delegate.cpp  table_delegate.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_resources.cpp  vulkan_window.cpp  vulkan_window.h
editors/graphical/mesh/: mesh_editor.cpp  mesh_editor.h  mesh_left_pane.cpp  mesh_left_pane.h
editors/graphical/mesh_editor/: mesh_editor.cpp  mesh_editor.h  mesh_left_pane.cpp  mesh_left_pane.h
editors/graphical/model_editor/: left_pane.cpp  left_pane.h  model_editor.cpp  model_editor.h  model_left_pane.cpp  model_left_pane.h
editors/graphical/result/: color_bar_widget.cpp  color_bar_widget.h  result_editor.cpp  result_editor.h  result_left_pane.cpp  result_left_pane.h
editors/graphical/result_editor/: color_bar_widget.cpp  color_bar_widget.h  result_editor.cpp  result_editor.h  result_left_pane.cpp  result_left_pane.h
editors/graphical/surface/: surface_editor.cpp  surface_editor.h  surface_left_pane.cpp  surface_left_pane.h
editors/graphical/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_resources.cpp  vulkan_window.cpp  vulkan_window.h
editors/text/: text_editor.cpp  text_editor.h  tree_sitter_highlighter.cpp  tree_sitter_highlighter.h
geometry/: graphic_data.h  mesh_data.h
geometry/mesh/: mesh_reader.cpp  mesh_reader.h
geometry/stl/: stl_reader.cpp  stl_reader.h
parser/: alloc.h  array.h  open_foam_dictionary.cpp  open_foam_dictionary.h  parser.c  parser.h
shaders/axis/: axis.frag  axis.vert  frag.spv  vert.spv
shaders/color/: color.vert  color_frag.txt  color_vert.txt  frag.spv  vert.spv
shaders/flat/: flat.frag  flat.vert  frag.spv  vert.spv
shaders/mesh/: frag.spv  mesh.frag  mesh.vert  vert.spv
shaders/model/: frag.spv  model.frag
shaders/wireframe/: vert.spv  wireframe.frag  wireframe.vert
systems/: local_system.cpp  local_system.h  remote_system.cpp  remote_system.h  ssl_system.h  system_manager.cpp  system_manager.h  target_system.h  wsl_system.cpp  wsl_system.h
template/: Allclean  Allrun  U  blockMeshDict  controlDict  epsilon  fvSchemes  fvSolution  g  nut  omega  p  p_rgh  transportProperties  turbulenceProperties
themes/: dark.json  light.json
views/console/: console.cpp  console.h
views/navigator/: case_navigator.cpp  case_navigator.h  navigator_model.cpp  navigator_model.h  node_data.cpp  node_data.h
wizards/mesh/: mesh_io.cpp  mesh_io.h  mesh_structs.h  page_10_geometry.cpp  page_10_geometry.h  page_20_blockmesh.cpp  page_20_blockmesh.h  page_30_blockmesh.cpp  page_30_blockmesh.h  page_40_surface_extraction.cpp  page_40_surface_extraction.h  page_40_surface_feature.cpp  page_40_surface_feature.h  page_50_castellation.cpp  page_50_castellation.h  page_60_snapcontrol.cpp  page_60_snapcontrol.h  page_70_layercontrol.cpp  page_70_layercontrol.h  wizard_mesh.cpp  wizard_mesh.h
wizards/new_case/: page_10_intro.cpp  page_10_intro.h  page_20_tutorial.cpp  page_20_tutorial.h  page_30_interactive.cpp  page_30_interactive.h  page_40_project.cpp  page_40_project.h  template_strings.h  wizard_new_case.cpp  wizard_new_case.h
wizards/solver/: page_10_control.cpp  page_10_control.h  page_20_transient.cpp  page_20_transient.h  page_30_physics.cpp  page_30_physics.h  page_40_boundary.cpp  page_40_boundary.h  page_50_algorithm.cpp  page_50_algorithm.h  page_60_simple.cpp  page_60_simple.h  page_70_pimple.cpp  page_70_pimple.h  page_80_piso.cpp  page_80_piso.h  page_90_parallel.cpp  page_90_parallel.h  page_93_visualization.cpp  page_93_visualization.h  solver_io.cpp  solver_io.h  solver_structs.h  surface_widget.cpp  surface_widget.h  wizard_solver.cpp  wizard_solver.h
